style(ui): Fix smiley face alignment and style completed task header

--- a/src/styles.css
+++ b/src/styles.css
@@ -104,11 +104,13 @@ li:hover .task-dropdown {
 
 .list-empty-state {
   font-size: 3rem;
+  padding: 1.2rem;
   text-align: center;
 }
 
 .completed-tasks-header {
-  margin: 10px 16px;
+  padding: 8px 16px;
+  margin: 0;
 }
 
 .completed-task-label {
